Added Header and Footer CSS

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
+
 <!--    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>-->
     <title>Infinity Park</title>
 </head>
@@ -142,50 +143,56 @@
 
 
     <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
-    <footer class = “footer”>
-        <div class=“logo” id=“footerlogo”>
-            <a href="index.html">Infinity Park Logo</a>
-        </div>        
-        <div class=“sitemaplinks”>
-            <h3>Sitemap</h3>
-            <ul class=“sitemap”>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>                <li>
-                    <a href="Things-to-do.html">Things to Do</a>
-                </li>                
-                <li>
-                    <a href="About-the-park.html">About Infinity Park</a>
-                </li>
-            </ul>
-        </div>        
-        <div class=“contactuslinks”>
-            <h3>Contact Us</h3>
-            <ul class=“contactus”>
-                <li>
-                    <a href="mailto:hello@infinitypark.com">Email Us</a>
-                </li>                
-                <li>
-                    <a href="#">Contact Form</a>
-                </li>                
-                <li>
-                    <a href="tel: +9048752338">Phone</a>
-                </li>
-            </ul>
-        </div>        
-        <div class=“socialmedialinks”>
-            <h3>Follow Us on Social Media!</h3>
-            <ul class= “socialmedia”>
-                <a href=“#”>Facebook</a>
-                <a href=“#”>Youtube</a>
-                <a href=“#”>Instagram</a>
-                <a href=“#”>Twitter</a>
-            </ul>
-        </div>    
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+    <img src="img/logo.jpg">
+
+            <p class="footer-links">
+                <a href="index.html">Home</a>
+                |
+                <a href="Things-to-do.html">Things to Do</a>
+                |
+                <a href="About-the-park.html">About</a>
+               
+            </p>
+
+            <p class="footer-company-name">© 2021 Infinity Park Inc. All rights reserved</p>
+        </div>
+
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>177A Bleecker Street</span>
+                    Orlando FL 32801 , USA </p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+1 407-672-6666</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:support@infinitypark.com">support@eduonix.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>Connect With Us</span>
+               
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+        </div>
     </footer>
     </div>
         </div>
     </div>
+
 </body>
 <!-- Body ends here -->
 </html>
