--- a/About-the-park.html
+++ b/About-the-park.html
@@ -204,13 +204,13 @@ This section was completed by team member Abish and Jonathan -->
         </div>
         
     </div>
-
+</div>
 <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
 <footer class="footer-distributed">
 
     <div class="footer-left">
 <img src="img/logo.jpg">
-
+    <h3>The greatest Marvel Park in the world.</h3>
         <p class="footer-links">
             <a href="index.html">Home</a>
             |
@@ -236,7 +236,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
         <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="mailto:support@infinitypark.com">support@eduonix.com</a></p>
+            <p><a href="mailto:support@infinitypark.com">support@infinitypark.com</a></p>
         </div>
     </div>
     <div class="footer-right">
@@ -252,7 +252,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
     </div>
 </footer>
-    </div>
+    
     </div>
 </div>
 </body>
