--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -140,7 +140,7 @@
           
         </div>
     </div>
-
+</div>
 
     <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
     <footer class="footer-distributed">
@@ -173,7 +173,7 @@
             </div>
             <div>
                 <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@infinitypark.com">support@eduonix.com</a></p>
+                <p><a href="mailto:support@infinitypark.com">support@infinitypark.com</a></p>
             </div>
         </div>
         <div class="footer-right">
@@ -189,7 +189,7 @@
             </div>
         </div>
     </footer>
-    </div>
+    
         </div>
     </div>
 
