corrected the header under the logo for index and things to do page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="footer-left">
     <img src="img/logo.jpg">
-
+    <h3>The greatest Marvel Park in the world.</h3>
             <p class="footer-links">
                 <a href="index.html">Home</a>
                 |
