Added border and border shadow with specific colors to the things to do page

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -38,7 +38,7 @@
         <div class="top-grid">
             <h2>Checkout all the Fantastic Rides this park offers </h2>
             <figure>
-                <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="Battle of Ultron Image" id = "tod-ultron-image" width= "400" height= "400">
                 <div class="top-right">
                     <h3>Avengers: Battle of Ultron</h3>
                     <p>
@@ -51,8 +51,8 @@
                   </div>
             </figure>  
             <figure>
-                <img src="img/Things-to-do-Ride-2-SpiderMan..jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
-                <div class="top-center">
+                <img src="img/Things-to-do-Ride-2-SpiderMan..jpg" alt="SpiderMan Ride Image" id = "i-tod-spiderman-image" idth= "400" height= "400">
+                <div class="top-center">w
                     <h3>The Amazing Adventures of Spider-Man</h3>
                     <p>
                         Strap on your 3-D glasses and join the world's most famous web slinger in a high-flying virtual reality ride. <br>
@@ -62,7 +62,7 @@
                   </div>
             </figure>
             <figure>
-                <img src="img/Things-to-do-Ride-3-Hulk.png" alt="Hulk Ride Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Ride-3-Hulk.png" alt="Hulk Ride Image" id = "i-tod-hulk-image" width= "400" height= "400">
                 <div class="top-left">
                     <h3>Worlds Tallest Roller coaster Hulk</h3>
                     <p>
@@ -77,14 +77,14 @@
         <div class="middle-grid">
             <h2>All the exciting Events and exclusive Live Shows this park offers</h2>
             <figure>
-                <img src="img/Things-to-do-Event-Live-Show.png" alt="Live Show Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Event-Live-Show.png" alt="Live Show Image" id = "tod-live-image" width= "400" height= "400">
                 <div class="middle-left">
                     <h3>Marvel Universe Live!</h3>
                     <p>See Marvel’s greatest Super Heroes unite against some of the most threatening villains in the Marvel Universe.</p>
                   </div>
             </figure>
             <figure>
-                <img src="img/Things-to-do-Event-CaptainMarvelEvent.png" alt="Captain Marvel Show Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Event-CaptainMarvelEvent.png" alt="Captain Marvel Show Image" id = "tod-live-image" width= "400" height= "400">
                 <div class="middle-center">
                     <h3>Exclusive New Captain Marvel Show  </h3>
                     <p>
@@ -94,7 +94,7 @@
                   </div>
             </figure>
             <figure>
-                <img src="img/Things-to-do-Event-Meet.png" alt="Meet and Greet Event Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Event-Meet.png" alt="Meet and Greet Event Image" id = "tod-live-image" width= "400" height= "400">
                 <div class="middle-right">
                     <h3>Meet all your Favorite Marvel Characters </h3>
                     <p>
@@ -110,7 +110,7 @@
         <div class="bottom-grid">
         <h2>Ride and Dine in our exclusive Safari Park</h2>
             <figure>
-                <img src="img/Things-to-do-Safari.jpg" alt="Safari Ride Image" width= "400" height= "400"/>
+                <img src="img/Things-to-do-Safari.jpg" alt="Safari Ride Image" id ="tod-safari-image" width= "400" height= "400"/>
                 <div class="bottom-left">
                     <h3>Infinity Safaris</h3>
                     <p>
@@ -119,7 +119,7 @@
                     </div>
             </figure>
             <figure>
-                <img src="img/Things-to-do-Safari-dinner.jpg" alt="Safari dinner Image" width= "400" height= "400"/>
+                <img src="img/Things-to-do-Safari-dinner.jpg" alt="Safari dinner Image" id ="tod-safari-image" width= "400" height= "400"/>
                 <div class="bottom-center">
                     <h3>Dinner Safari</h3>
                     <p>
@@ -128,7 +128,7 @@
                   </div>
             </figure>
             <figure>
-                <img src="img/Things-to-do-Safari-Drive-through.jpg" alt="Safari drive through Image" width= "400" height= "400"/>
+                <img src="img/Things-to-do-Safari-Drive-through.jpg" alt="Safari drive through Image" id ="tod-safari-image" width= "400" height= "400"/>
                 <div class="bottom-right">
                     <h3>Drive Through Safari</h3>
                     <p>
