About the park images added box shadow to each.

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -29,7 +29,7 @@
     accessibility and img tages to include an image of the park layout
 This section was completed by team member Abish and Jonathan -->
     <div id = "InfinityImageMap">
-        <img src="img/About-the-park-park.png" alt="Infinity Park Map" width= "1440" height= "516" usemap="#InfinityParkMap">
+        <img src="img/About-the-park-park.png" alt="Infinity Park Map" width= "1440" height= "516" usemap="#InfinityParkMap" id= i-aip-map-image>
         <map name="InfinityParkMap">
             <area class = "map1" shape="circle" coords="525,367,32" alt="Ironman Link" href="#Ironman">
             <area class = "map1" shape="circle" coords="774,358,37" alt="Hulk Link" href="#Hulk">
@@ -59,7 +59,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "RideIronManImage">
-            <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "200" height= "150">
+            <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "200" height= "150" id= i-aip-ironman-image>
         </div>
 
         <div class = "RideIronManOpeningTimes">
@@ -91,7 +91,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "RideHulkImage">
-            <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100">
+            <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100" id= i-aip-hulk-image>
         </div>
 
         <div class = "RideHulkOpeningTimes">
@@ -123,7 +123,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "RideSpidermanImage">
-            <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150">
+            <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150" id= i-aip-spiderman-image>
         </div>
 
         <div class = "RideSpidermanOpeningTimes">
@@ -155,7 +155,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "MexicanRestaurantImage">
-            <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200">
+            <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200" id= i-aip-map-image>
         </div>
 
         <div class = "MexicanRestaurantOpeningTimes">
@@ -187,7 +187,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "ItalianRestaurantShopImage">
-            <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130">
+            <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130" id= i-aip-map-image>
         </div>
         
         <div class = "ItalianRestaurantShopOpeningTimes">
