ironman image fix

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
         <div id="mainbutton3">
             <div class = "buttonpic">
-                <a href="About-the-park.html"><img id = "i-tod-ironaman-image" src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "250" height= "250"></a>
+                <a href="About-the-park.html"><img id = "i-ironman-image" src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "250" height= "250"></a>
             </div>
         </div>
     </div>
