added a new embeded video for index page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <source src="img/uol-infinity.mp4" type="video/mp4">
                 </video>
             </div>
+            <div class ="index-heading-main">
+                <h1>Welcome to the Greatest Marvel Park in the whole Galaxy! </h1>
+            </div>
     <div style="padding:20px;margin-top:60px">
         
         <!-- Division for an interesting video of the Hulk Ride, which is the main attraction of the park so located 
