corrected border color

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         
         <div id="mainbutton2">
             <div class = "buttonpic">
-                <a href="Things-to-do.html"><img id = "i-tod-spiderman-image" src="img/Things-to-do-Ride-2-SpiderMan..jpg" alt="Spiderman Ride Picture" width= "250" height= "250"></a>
+                <a href="Things-to-do.html"><img id = "i-tod-spiderman-image" src="img/Things-to-do-Ride-2-SpiderMan.jpg" alt="Spiderman Ride Picture" width= "250" height= "250"></a>
             </div>
         </div>
         
