About the park added grid

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -46,15 +46,15 @@ This section was completed by team member Abish and Jonathan -->
         Ironman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
         is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
         Completed By Abish and Jonathan   -->
-
-    <div class =RideIronMan>
-        <a id="Ironman"></a>
-        <div class = "RideIronManTitle">
-            <h2>IronMan Ride</h2>
-        </div>
+    <div class = "grid-container-aip">
+        <div class =RideIronMan>
+                <a id="Ironman"></a>
+                    <div class = "RideIronManTitle">
+                        <h2>IronMan Ride</h2>
+            </div>
 
         <div class = "RideIronManDescription">
-            <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of the antagonist of the film he is currently in.</p>
+            <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of<br> the antagonist of the film he is currently in.</p>
         </div>
 
         <div class = "RideIronManImage">
@@ -73,137 +73,137 @@ This section was completed by team member Abish and Jonathan -->
                 <tr><th>Sunday</th><td>10am - 10pm</td></tr>
             </table>
         </div>
-    <!--  
-        Hulk ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
-        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-        Completed By Abish and Jonathan   -->
-    </div>
-
-    <div class = RideHulk>
-        <a id="Hulk"></a>
-        <div class = "RideHulkTitle">
-            <h2>Hulk ride</h2>
+            <!--  
+            Hulk ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
+            is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+            Completed By Abish and Jonathan   -->
         </div>
 
-        <div class = "RideHulkDescription">
-            <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of self discovery and no smashing at all.</p>
+        <div class = RideHulk>
+            <a id="Hulk"></a>
+            <div class = "RideHulkTitle">
+                <h2>Hulk ride</h2>
+            </div>
+
+            <div class = "RideHulkDescription">
+                <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of self discovery,<br> and no smashing at all.</p>
+            </div>
+
+            <div class = "RideHulkImage">
+                <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100" id= i-aip-hulk-image>
+            </div>
+
+            <div class = "RideHulkOpeningTimes">
+                <p>Opening times:</p>
+                <table>
+                    <tr><th>Monday</th><td>Closed</td></tr>
+                    <tr><th>Tuesday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Wednesday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Thursday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Friday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Saturday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
+                </table>
+            </div>
+            <!--  
+            Spiderman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
+            is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+            Completed by Abish and Jonathan  -->
         </div>
 
-        <div class = "RideHulkImage">
-            <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100" id= i-aip-hulk-image>
+        <div class = RideSpiderman>
+            <a id="Spiderman"></a>
+            <div class = "RideSpidermanTitle">
+                <h2>SpiderMan ride</h2>
+            </div>
+
+            <div class = "RideSpidermanDescription">
+                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
+            </div>
+
+            <div class = "RideSpidermanImage">
+                <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150" id= i-aip-spiderman-image>
+            </div>
+
+            <div class = "RideSpidermanOpeningTimes">
+                <p>Opening times:</p>
+                <table>
+                    <tr><th>Monday</th><td>Closed</td></tr>
+                    <tr><th>Tuesday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Wednesday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Thursday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Friday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Saturday</th><td>9am - 7pm</td></tr>
+                    <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
+                </table>
+            </div>
+            <!--  
+            Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
+            is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+            Completed by Abish and Jonathan  -->
         </div>
 
-        <div class = "RideHulkOpeningTimes">
-            <p>Opening times:</p>
-            <table>
-                <tr><th>Monday</th><td>Closed</td></tr>
-                <tr><th>Tuesday</th><td>9am - 7pm</td></tr>
-                <tr><th>Wednesday</th><td>9am - 7pm</td></tr>
-                <tr><th>Thursday</th><td>9am - 7pm</td></tr>
-                <tr><th>Friday</th><td>9am - 7pm</td></tr>
-                <tr><th>Saturday</th><td>9am - 7pm</td></tr>
-                <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
-            </table>
-        </div>
-    <!--  
-        Spiderman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
-        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-        Completed by Abish and Jonathan  -->
-    </div>
+        <div class = MexicanRestaurantShop>
+            <a id="MexicanRestaurant"></a>
+            <div class = "MexicanRestaurantTitle">
+                <h2>Mexican Restaurant</h2>
+            </div>
 
-    <div class = RideSpiderman>
-        <a id="Spiderman"></a>
-        <div class = "RideSpidermanTitle">
-            <h2>SpiderMan ride</h2>
-        </div>
+            <div class = "MexicanRestaurantDescription">
+                <p><b>Its a mexican restaurant.</b><br> Food but its Mexican</p>
+            </div>
 
-        <div class = "RideSpidermanDescription">
-            <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
-        </div>
+            <div class = "MexicanRestaurantImage">
+                <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200" id= i-aip-map-image>
+            </div>
 
-        <div class = "RideSpidermanImage">
-            <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150" id= i-aip-spiderman-image>
-        </div>
-
-        <div class = "RideSpidermanOpeningTimes">
-            <p>Opening times:</p>
-            <table>
-                <tr><th>Monday</th><td>Closed</td></tr>
-                <tr><th>Tuesday</th><td>9am - 7pm</td></tr>
-                <tr><th>Wednesday</th><td>9am - 7pm</td></tr>
-                <tr><th>Thursday</th><td>9am - 7pm</td></tr>
-                <tr><th>Friday</th><td>9am - 7pm</td></tr>
-                <tr><th>Saturday</th><td>9am - 7pm</td></tr>
-                <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
-            </table>
-        </div>
-    <!--  
-        Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
-        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-        Completed by Abish and Jonathan  -->
-    </div>
-
-    <div class = MexicanRestaurantShop>
-        <a id="MexicanRestaurant"></a>
-        <div class = "MexicanRestaurantTitle">
-            <h2>Mexican Restaurant</h2>
+            <div class = "MexicanRestaurantOpeningTimes">
+                <p>Opening times:</p>
+                <table>
+                    <tr><th>Monday</th><td>Closed</td></tr>
+                    <tr><th>Tuesday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Wednesday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Thursday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Friday</th><td>10:30am - 6:30pm</td></tr>
+                    <tr><th>Saturday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Sunday</th><td>12am - 5pm</td></tr>
+                </table>
+            </div>
+            <!--  
+            Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
+            is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+            Completed By Abish and Jonathan   -->
         </div>
 
-        <div class = "MexicanRestaurantDescription">
-            <p><b>Its a mexican restaurant.</b><br> Food but its Mexican</p>
-        </div>
+        <div class = ItalianRestaurantShop>
+            <a id="ItalianRestaurant"></a>
+            <div class = "ItalianRestaurantShopTitle">
+                <h2>Italian Restaurant</h2>
+            </div>
 
-        <div class = "MexicanRestaurantImage">
-            <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200" id= i-aip-map-image>
-        </div>
+            <div class = "ItalianRestaurantShopDescription">
+                <p><b>Its an Italian Restaurant</b><br> Pizza</p>
+            </div>
 
-        <div class = "MexicanRestaurantOpeningTimes">
-            <p>Opening times:</p>
-            <table>
-                <tr><th>Monday</th><td>Closed</td></tr>
-                <tr><th>Tuesday</th><td>10am - 6pm</td></tr>
-                <tr><th>Wednesday</th><td>10am - 6pm</td></tr>
-                <tr><th>Thursday</th><td>10am - 6pm</td></tr>
-                <tr><th>Friday</th><td>10:30am - 6:30pm</td></tr>
-                <tr><th>Saturday</th><td>10am - 6pm</td></tr>
-                <tr><th>Sunday</th><td>12am - 5pm</td></tr>
-            </table>
-        </div>
-    <!--  
-        Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
-        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-        Completed By Abish and Jonathan   -->
-    </div>
-
-    <div class = ItalianRestaurantShop>
-        <a id="ItalianRestaurant"></a>
-        <div class = "ItalianRestaurantShopTitle">
-            <h2>Italian Restaurant</h2>
-        </div>
-
-        <div class = "ItalianRestaurantShopDescription">
-            <p><b>Its an Italian Restaurant</b><br> Pizza</p>
-        </div>
-
-        <div class = "ItalianRestaurantShopImage">
-            <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130" id= i-aip-map-image>
-        </div>
+            <div class = "ItalianRestaurantShopImage">
+                <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130" id= i-aip-map-image>
+            </div>
         
-        <div class = "ItalianRestaurantShopOpeningTimes">
-            <p>Opening times:</p>
-            <table>
-                <tr><th>Monday</th><td>Closed</td></tr>
-                <tr><th>Tuesday</th><td>10am - 6pm</td></tr>
-                <tr><th>Wednesday</th><td>10am - 6pm</td></tr>
-                <tr><th>Thursday</th><td>10am - 6pm</td></tr>
-                <tr><th>Friday</th><td>10am - 6pm</td></tr>
-                <tr><th>Saturday</th><td>10am - 5pm</td></tr>
-                <tr><th>Sunday</th><td>10am - 5pm</td></tr>
-            </table>
-        </div>
+            <div class = "ItalianRestaurantShopOpeningTimes">
+                <p>Opening times:</p>
+                <table>
+                    <tr><th>Monday</th><td>Closed</td></tr>
+                    <tr><th>Tuesday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Wednesday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Thursday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Friday</th><td>10am - 6pm</td></tr>
+                    <tr><th>Saturday</th><td>10am - 5pm</td></tr>
+                    <tr><th>Sunday</th><td>10am - 5pm</td></tr>
+                </table>
+            </div>
         
+        </div>
     </div>
-</div>
 <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
 <footer class="footer-distributed">
 
