--- a/About-the-park.html
+++ b/About-the-park.html
@@ -39,7 +39,7 @@ This section was completed by team member Abish and Jonathan -->
     </div>
 
     <div id = "InfinityCaption">
-        <p>Map of Infinity park.</p>
+        <p>Map of Infinity park</p>
     </div>
 
     <!--  
@@ -58,7 +58,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "RideIronManImage">
-            <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "200" height= "150" id= i-aip-ironman-image>
+            <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "400" height= "300" id= i-aip-ironman-image>
         </div>
 
         <div class = "RideIronManOpeningTimes">
@@ -90,7 +90,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "RideHulkImage">
-                <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100" id= i-aip-hulk-image>
+                <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "400" height= "300" id= i-aip-hulk-image>
             </div>
 
             <div class = "RideHulkOpeningTimes">
@@ -122,7 +122,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "RideSpidermanImage">
-                <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150" id= i-aip-spiderman-image>
+                <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "400" height= "300" id= i-aip-spiderman-image>
             </div>
 
             <div class = "RideSpidermanOpeningTimes">
@@ -154,7 +154,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "MexicanRestaurantImage">
-                <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200" id= i-aip-map-image>
+                <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
             </div>
 
             <div class = "MexicanRestaurantOpeningTimes">
@@ -186,7 +186,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "ItalianRestaurantShopImage">
-                <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130" id= i-aip-map-image>
+                <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
             </div>
         
             <div class = "ItalianRestaurantShopOpeningTimes">
