added rounded corners for images

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div id="mainbutton">
                 <div class = "buttonpic">
                     <figure>
-                    <a href="Things-to-do.html"><img id= "i-tod-hulk-image" src="img/Things-to-do-Ride-3-Hulk.png" alt="Hulk Ride Picture" width= "350" height= "350"></a>
+                    <a href="Things-to-do.html"><img id= "i-hulk-image" src="img/Things-to-do-Ride-3-Hulk.png" alt="Hulk Ride Picture" width= "450" height= "550" ></a>
                     </figure> 
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div id="mainbutton">
                 <div class = "buttonpic">
                     <figure>
-                    <a href="Things-to-do.html"><img id = "i-tod-spiderman-image" src="img/Things-to-do-Ride-2-SpiderMan.jpg" alt="Spiderman Ride Picture" width= "350" height= "350"></a>
+                    <a href="Things-to-do.html"><img id = "i-spiderman-image" src="img/Things-to-do-Ride-2-SpiderMan.jpg" alt="Spiderman Ride Picture" width= "450" height= "550"></a>
                     </figure> 
                 </div>
             </div>
@@ -123,7 +123,7 @@
             <div id="mainbutton">
                 <div class = "buttonpic">
                     <figure>
-                    <a href="About-the-park.html"><img id = "i-ironman-image" src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "350" height= "350"></a>
+                    <a href="About-the-park.html"><img id = "i-ironman-image" src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "450" height= "550" border-radius=25px padding=20px></a>
                     </figure> 
                 </div>
             </div> 
