Hovering Code Added for Spiderman in About the Park

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -54,7 +54,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
         <div class = "RideIronManDescription">
-            <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of<br> the antagonist of the film he is currently in.</p>
+            <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of the antagonist <br> of the film he is currently in.</p>
         </div>
 
         <div class = "RideIronManImage">
@@ -86,7 +86,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "RideHulkDescription">
-                <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of self discovery,<br> and no smashing at all.</p>
+                <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of <br> self discovery and no smashing at all.</p>
             </div>
 
             <div class = "RideHulkImage">
