--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -76,8 +76,8 @@
                             <h3>Avengers: Battle of Ultron</h3>
                             
                             <p>
-                                Join forces with The Avengers at Worlds of Adventure in an exhilarating 4D dark ride <br>
-                                as they engage in a fierce struggle for survival against one of the planet’s most notorious enemies <br>
+                                Join forces with The Avengers at Worlds of Adventure in an exhilarating 4D dark ride
+                                as they engage in a fierce struggle for survival against one of the planet’s most notorious enemies.<br>
                             </p>
                         </div>
                 </figure>  
