Added semantic tags for Navbar

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -11,7 +11,7 @@
         1)the Navigation Bar at top, similar to all pages
         2)Three most important Things this park offers is Rides,Shows and Safari .Picture and a short description is provided for the audience  on each aspect 
         3)Footer
-    all the below code is contributed by Abish,Pietro,Jon,Can and Pradhyumnaa -->
+All the below code is contributed by Abish, Pietro, Jon, Can and Pradhyumnaa -->
 <!-- Body starts here -->
 <body>
 
@@ -19,13 +19,13 @@
             
         <div class="things-to-do-body-content">      
 <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->            
-            <ul class = "navbar">
+            <navbar class = "navbar">
                 <li class = "nav-item-logo"><a href="index.html" ><img src="img/logo.jpg" width = " 150" height = "50" ></a></li>
                 <li class = "nav-item-page-link"> <a href="Things-to-do.html" class="navlinks">Things to Do</a></li>
                 <li class = "nav-item-page-link"><a href="About-the-park.html" class="nav-links">About Infinity Park</a></li>
                 <li class = "nav-item-page-button"><button>Buy Tickets</button></li>
                 <li class = "nav-item-page-button"><button>Sign In/Sign Up</button></li>
-              </ul>
+              </navbar>
             <div class="slider-wrapper">
             <div class="slider">
                 <input type="radio" name="slider" class="trigger" id="one" checked="checked" />
