--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         
         <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
             
-            <ul class = "navbar">
+            <navbar class = "navbar">
                 <li class = "nav-item-logo"><a href="index.html" ><img src="img/logo.jpg" width = " 150" height = "50" ></a></li>
                 <li class = "nav-item-page-link"> <a href="Things-to-do.html" class="navlinks">Things to Do</a></li>
                 <li class = "nav-item-page-link"><a href="About-the-park.html" class="nav-links">About Infinity Park</a></li>
                 <li class = "nav-item-page-button"><button>Buy Tickets</button></li>
                 <li class = "nav-item-page-button"><button>Sign In/Sign Up</button></li>
-            </ul>
+            </navbar>
 
          <div class="video-container">
                 <video  controls width="100%"  autoplay muted>
