Opacity of images reduced sligthly.

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -24,7 +24,7 @@
 <div style="padding:20px;margin-top:60px">
 
 
-<!-- Map links code. Using area class to map circles and href to link to approprate section of the pages and alt to allow for better
+<!-- Map links code. Using area class to map circles and href to link to appropriate section of the pages and alt to allow for better
     accessibility and img tages to include an image of the park layout
 This section was completed by team member Abish and Jonathan -->
     <div id = "InfinityImageMap">
